kubernetes/platform/cilium/app/components/hubble/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble
spec:
  hostnames:
  - hubble.${CLUSTER_DOMAIN}
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: envoy-gateway
    namespace: envoy-gateway-system
  rules:
  - backendRefs:
     - name: hubble-ui
       port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
